// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type creates specified field with specified types: object with fields 1`] = `
Record {
  Symbol(internal): Object {
    "fields": Map {
      "A" => RecordField {
        Symbol(internal): Object {
          "kind": "input",
          "multiplicity": "one",
          "name": "A",
          "type": "string",
        },
        Symbol(metadata): Object {
          "order": 0,
          "required": false,
        },
      },
      "B" => RecordField {
        Symbol(internal): Object {
          "kind": "input",
          "multiplicity": "one",
          "name": "B",
          "type": Object {
            "multiplicity": "one",
            "name": "BBB",
            "type": "enum",
          },
        },
        Symbol(metadata): Object {
          "order": 1,
          "required": false,
        },
      },
      "c" => RecordField {
        Symbol(internal): Object {
          "kind": "input",
          "multiplicity": "many",
          "name": "c",
          "type": Object {
            "multiplicity": "many",
            "name": "CCC",
            "type": "entity",
          },
        },
        Symbol(metadata): Object {
          "order": 2,
          "required": false,
        },
      },
    },
    "kind": "input",
    "name": "A",
  },
  Symbol(metadata): Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "global": "A",
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "titlePlural": "As",
  },
}
`;

exports[`Type creates specified field with specified types: toObject with fields 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "metadata": Object {
        "order": 0,
        "required": false,
      },
      "multiplicity": "one",
      "name": "A",
      "title": undefined,
      "type": "string",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "metadata": Object {
        "order": 1,
        "required": false,
      },
      "multiplicity": "one",
      "name": "B",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "BBB",
        "type": "enum",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "metadata": Object {
        "order": 2,
        "required": false,
      },
      "multiplicity": "many",
      "name": "c",
      "title": undefined,
      "type": Object {
        "multiplicity": "many",
        "name": "CCC",
        "type": "entity",
      },
    },
  ],
  "kind": "input",
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "global": "A",
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "titlePlural": "As",
  },
  "name": "A",
  "title": undefined,
}
`;

exports[`Type default has no Singular: toObject 1`] = `
Object {
  "description": undefined,
  "fields": Array [],
  "kind": "input",
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "global": "Species",
    "name": Object {
      "plural": "AllSpecies",
      "singular": "Species",
    },
    "titlePlural": "AllSpecies",
  },
  "name": "Species",
  "title": undefined,
}
`;

exports[`Type default: toObject 1`] = `
Object {
  "description": undefined,
  "fields": Array [],
  "kind": "input",
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "global": "A",
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "titlePlural": "As",
  },
  "name": "A",
  "title": undefined,
}
`;
